--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -5,3 +5,21 @@
   font-weight: 400;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Tungsten";
+  src: url("/fonts/Tungsten/Tungsten-Semibold.woff2") format("woff2"),
+    url("/fonts/Tungsten/Tungsten-Semibold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Tungsten";
+  src: url("/fonts/Tungsten/Tungsten-Bold.woff2") format("woff2"),
+    url("/fonts/Tungsten/Tungsten-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
